app/src/main/java/com/example/astratechpoststask/core/error/Error.kt
package com.example.astratechpoststask.core.error

sealed interface Error